# deploy-sam

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/workflows/: deploy-risk-gate.yml
backend/: db.py  main.py  nl.py  recommend.py  scoring.py  similar.py
backend/tests/: conftest.py  test_api.py  test_recommend_nl.py  test_scoring.py
frontend/: index.html
ml/: generate_data.py  train.py
ml/artifacts/: holdout_scored.csv  metadata.json  model.json
ml/data/: deployments.csv
