[project]
name = "deployiq"
version = "1.0.0"
description = "AI-powered deployment risk intelligence — scores, explains (SHAP), and gates every deploy before it ships."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
    "xgboost==3.3.0",
    "scikit-learn==1.9.0",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "pydantic==2.13.4",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "unit: fast, pure-logic tests (no HTTP, no DB seed)",
    "integration: full-stack tests via FastAPI TestClient",
]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "ml"]
